change getting firebase token function update rest of the dependencies fix blog modal overlap with lightbox

--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@ body {
   text-decoration: none;
 }
 .ReactModal__Overlay {
-  z-index: 9999;
+  z-index: 1000;
 }
 #simple-menu {
   z-index: 9999;
